# todo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
todo/: .env  main.py
todo/alembic/: env.py
todo/alembic/versions/: 2024_02_01_1530-7a138815d7aa_create_user_table.py  2024_02_01_1545-1c45f5539877_create_task_table.py  2024_02_04_2048-ec303583eb9d_change_user_table.py  2024_02_08_2136-7b8f159283af_update_change_user_table_add_refresh_.py
todo/api_v1/: __init__.py
todo/api_v1/auth/: crud.py  schemas.py  utils.py  views.py
todo/api_v1/tasks/: crud.py  dependencies.py  schemas.py  views.py
todo/api_v1/users/: crud.py  schemas.py
todo/core/: config.py
todo/core/models/: __init__.py  base.py  db_helper.py  mixin.py  task.py  user.py
