[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["ivan-karaberov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standart"], version = "^0.27.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
